# cam-ncnn-win

./: .gitignore  LICENSE  readme.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yyang/camncnnwin/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  main_activity_jni.cpp  main_activity_jni.h
app/src/main/jni/ncnn-20210720-android-vulkan/armeabi-v7a/include/ncnn/: allocator.h  mat.h  platform.h
app/src/main/jni/ncnn-20210720-android-vulkan/armeabi-v7a/lib/cmake/: OSDependentTargets.cmake
app/src/main/jni/ncnn-20210720-android-vulkan/armeabi-v7a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
